# soundcore

./: .editorconfig  .gitignore  Cargo.toml  SoundCore.sln  rust-toolchain.toml
crates/soundcore-apo-core/: Cargo.toml
crates/soundcore-apo-core/src/: lib.rs
crates/soundcore-audio/: Cargo.toml
crates/soundcore-audio/src/: device.rs  endpoint_volume.rs  init.rs  lib.rs  policy_config.rs  process.rs  process_loopback.rs  session.rs
crates/soundcore-camera/: Cargo.toml
crates/soundcore-camera/src/: broadcaster.rs  capture.rs  init.rs  lib.rs  source.rs
crates/soundcore-core-service/: Cargo.toml  app.manifest  build.rs
crates/soundcore-core-service/src/: audio_ops.rs  config.rs  embed.rs  engine.rs  gui.rs  i18n.rs  main.rs  runtime.rs  server.rs  service_mgmt.rs
crates/soundcore-ipc/: Cargo.toml  build.rs
crates/soundcore-ipc/src/: codec.rs  lib.rs  transport.rs
crates/soundcore-mic-lock/: Cargo.toml
crates/soundcore-mic-lock/src/: lib.rs
crates/soundcore-vst-host/: Cargo.toml  build.rs
crates/soundcore-vst-host/src/: ffi.rs  lib.rs
crates/soundcore-vst-scanner/: Cargo.toml
crates/soundcore-vst-scanner/src/: main.rs
docs/: camera-sharing-research.md
installer/: SoundCore.wxs
native/: CMakeLists.txt  CMakePresets.json
native/apo/: CMakeLists.txt  SoundCoreApo.def
native/apo/include/: ChainConfig.h  SoundCoreApo.h  soundcore_apo_core.h
native/apo/src/: ChainConfig.cpp  GuidsImpl.cpp  Registration.cpp  SoundCoreApo.cpp  dllmain.cpp
native/virtual-camera/: CMakeLists.txt  SoundCoreVirtualCamera.def
native/virtual-camera/include/: Filter.h  Guids.h  MediaTypes.h  OutputPin.h  SharedFrameReader.h
native/virtual-camera/src/: Filter.cpp  GuidsImpl.cpp  MFVirtualCamera.cpp  MediaTypes.cpp  OutputPin.cpp  Registration.cpp  SharedFrameReader.cpp  dllmain.cpp
native/vst-host/: CMakeLists.txt
native/vst-host/include/: soundcore_vst_host.h
native/vst-host/src/: Chain.cpp  Host.cpp  HostInternals.h  Index.cpp
protos/: soundcore.proto
scripts/: build-installer.ps1  build.ps1
ui/SoundCore.UI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SoundCore.UI.csproj  app.manifest
ui/SoundCore.UI/Localization/: Loc.cs  StrExtension.cs
ui/SoundCore.UI/Pages/: CameraPage.xaml  CameraPage.xaml.cs  DevicesPage.xaml  DevicesPage.xaml.cs  MicLockPage.xaml  MicLockPage.xaml.cs  PerAppPage.xaml  PerAppPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  VstPage.xaml  VstPage.xaml.cs
ui/SoundCore.UI/Services/: IpcClient.cs  ThemeHelper.cs  UiSettings.cs
ui/SoundCore.UI/Strings/de-DE/: Resources.resw
ui/SoundCore.UI/Strings/en-US/: Resources.resw
ui/SoundCore.UI/Strings/es-ES/: Resources.resw
ui/SoundCore.UI/Strings/fr-FR/: Resources.resw
ui/SoundCore.UI/Strings/ru-RU/: Resources.resw
ui/SoundCore.UI/Strings/uk-UA/: Resources.resw
ui/SoundCore.UI/Strings/zh-CN/: Resources.resw
