[workspace]
resolver = "2"
members = [
  "crates/soundcore-ipc",
  "crates/soundcore-audio",
  "crates/soundcore-camera",
  "crates/soundcore-mic-lock",
  "crates/soundcore-vst-host",
  "crates/soundcore-vst-scanner",
  "crates/soundcore-apo-core",
  "crates/soundcore-core-service",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["SoundCore"]
license = "Proprietary"
publish = false

[workspace.dependencies]
# Windows bindings — kept on a single version across the workspace
windows = "0.58.0"
windows-core = "0.58.0"
windows-result = "0.2.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# GUI (single-exe build)
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.27"
egui_extras = "0.27"

# Protocol buffers
prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"

# Errors
thiserror = "1"
anyhow = "1"

# Synchronization
parking_lot = "0.12"
once_cell = "1"
crossbeam = "0.8"

# Serialization for on-disk config
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio buffer plumbing
ringbuf = "0.4"
bytes = "1"

# CLI / config helpers
directories = "5"

# Service control
windows-service = "0.7"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release-with-debug]
inherits = "release"
strip = "none"
debug = "full"
