[package]
name = "soundcore-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "WASAPI device enumeration, Process Loopback per-PID capture, AudioPolicyConfig bindings"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
ringbuf = { workspace = true }
once_cell = { workspace = true }
windows-core = { workspace = true }
windows-result = { workspace = true }
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_Performance",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Registry",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_Media_Audio_Apo",
  "Win32_Media_KernelStreaming",
  "Win32_Devices_FunctionDiscovery",
  "Win32_Devices_Properties",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_Security",
] }

[lib]
path = "src/lib.rs"
