[package]
name = "soundcore-core-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "SoundCore — all-in-one binary: GUI, audio engine, mic-lock, camera proxy and (optional) Windows-Service mode"

[dependencies]
soundcore-ipc = { path = "../soundcore-ipc" }
soundcore-audio = { path = "../soundcore-audio" }
soundcore-camera = { path = "../soundcore-camera" }
soundcore-mic-lock = { path = "../soundcore-mic-lock" }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
directories = { workspace = true }
windows-service = { workspace = true }
prost = { workspace = true }
once_cell = { workspace = true }

# GUI
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }

windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Console",
  "Win32_System_LibraryLoader",
  "Win32_System_Services",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Security",
] }

[build-dependencies]
winresource = "0.1"

[[bin]]
name = "SoundCore"
path = "src/main.rs"
